<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FYP</string>

    <!-- TABZZZ -->
    <string name="title_section1">Sensors</string>
    <string name="title_section2">Image</string>
    <string name="title_section3">Control</string>
    <string name="title_section4">Stats</string>

    <!-- Action Bar Menu Items -->
    <string name="action_bar_menu_pair">Pair</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>

    <!-- Toasts Msgs -->
    <string name="connected_to_pi_success">Connected to Pi</string>
    <string name="connected_to_pi_failed">Connected to Pi Failed</string>

    <!-- Sensors -->
    <string name="sensor_mq7">Carbon Monoxide</string>
    <string name="sensor_mq2">Flammable Gas</string>
    <string name="sensor_temperature">Temperature</string>
    <string name="sensor_motion">Motion</string>

    <!-- Config Fragment -->
    <string name="config_title_system_details">System Details</string>
    <string name="config_system_details_name">name</string>
    <string name="config_system_details_location">location</string>
    <string name="config_system_details_gps_lat">gps_lat</string>
    <string name="config_system_details_gps_lng">gps_lng</string>
    <string name="config_title_sensor_manager">Sensor Manager</string>
    <string name="config_sensor_manager_collection_rate">Data Collection Rate</string>
    <string name="config_sensor_manager_collection_priority">Data Collection Priority</string>
    <string name="config_title_alert_manager">Alert Manager</string>
    <string name="config_alert_manager_camera_on">Camera On</string>
    <string name="config_alert_manager_video_mode">Video Mode</string>
    <string name="config_alert_manager_buzzer_on">Alert Buzzer On</string>
    <string name="config_alert_manager_push_on">Push Notifications On</string>
    <string name="config_alert_manager_lockdown_on">Lockdown Mode On</string>
    <string name="config_title_api_manager">API Manager</string>
    <string name="config_api_manager_sensor_value_upload_rate">Sensor Value Upload Rate</string>
    <string name="config_api_manager_camera_image_upload_rate">Camera Image Upload Rate</string>
    <string name="config_api_manager_system_config_request_rate">System Config Reguest Rate</string>
    <string name="config_title_access_point_manager">Access Point Manager</string>
    <string name="config_sensors">Sensors</string>
    <string name="config_sensor_is_active">Is Active</string>
    <string name="config_sensor_alert_threshold">Alert Threshold</string>
    <string name="config_sensor_probe_rate">Probe Rate</string>
    <string name="config_sensor_priority">Priority</string>

    <!-- Camera Fragment -->
    <string name="camera_no_images_to_display">No Images to Display</string>
    <string name="camera_unable_to_display_images">No Images to Display</string>
    <string name="tv_title_images">Images</string>
    <string name="tv_title_videos">Videos</string>
    <string name="tv_captured">Captured :: </string>

    <string name="camera_request_image">Capture</string>
    <string name="camera_request_stream">Start Stream</string>

    <!-- General -->
    <string name="sensor_last_updated">Last Updated</string>
    <string name="config_upload_success">Config Uploaded Successfully</string>
    <string name="config_upload_failed">Config Uploaded Failed, Please Try Again.</string>
    <string name="max_value">Max</string>
    <string name="min_value">Min</string>

    <string-array name="boolean_array">
        <item>On</item>
        <item>Off</item>
    </string-array>

    <string name="graphing_title_current_hour">Current Hour Sensor Readings</string>
    <string name="graphing_title_current_day_summary_by_hour">Current Day Summary</string>
    <string name="graphing_title_day_summary">Complete Summary</string>
    <string name="sensor_output_feedback">Sensor Output Feedback</string>

    <!--Sensor Descriptions-->
    <string name="sensor_description_mq2">Flammable Gas Sensor(MQ2) is useful for gas leakage detection. It can detect LPG, I-Butane, Methane, Alcohol, Hydrogen and Smoke.</string>
    <string name="sensor_description_mq7">Carbon Monoxide Sensor(MQ7) is used for Carbon Monoxide detection.</string>
    <string name="sensor_description_motion">Infrared Motion Detector is used to detect motion from humanoids/pets from about 20 feet away.</string>
    <string name="sensor_description_thermistor">Thermistor Sensor is used to measure temperature.</string>
    <string name="sensor_description_light">Light sensor is used to measure luminous flux per unit area.</string>

    <!--Sensor Output Feedback Text-->
    <string name="sensor_output_normal">Safe Level</string>
    <!--Co-->
    <string name="sensor_output_mq7_25">Maximum legal level for the work place.</string>
    <string name="sensor_output_mq7_35">Headache and Dizziness within 6 to 8 hours of constant exposure.</string>
    <string name="sensor_output_mq7_100">Headache after 1 to 2 hours of constant exposure.</string>
    <string name="sensor_output_mq7_200">Dizziness, Nausea, Fatigue, Headache after 2 to 3 hours of constant exposure.</string>
    <string name="sensor_output_mq7_400">Nausea and Headache after 1 to 2 hours, life threatening in 3 hours.</string>
    <string name="sensor_output_mq7_800">Dizziness, Nausea and Headache after 45 minutes, unconsciousness after 2 hours.</string>
    <string name="sensor_output_mq7_1600">Dizziness, Nausea and Headache after 20 minutes, unconsciousness and possible death after 2 hours.</string>
    <string name="sensor_output_mq7_3200">Dizziness, Nausea and Headache after 5 to 10 minutes, unconsciousness and possible death after 15 minutes.</string>
    <string name="sensor_output_mq7_6400">Dizziness and Headache after 1 to 2 minutes, unconsciousness and possible death between 2 and 15 minutes.</string>
    <string name="sensor_output_mq7_12800">Danger of death in 1 to 3 minutes.</string>

    <!--Temperature-->
    <string name="sensor_output_thermistor_sub_zero">Sub-zero, greatly increased risk of Pneumonia.</string>
    <string name="sensor_output_thermistor_0">Close to Freezing, increased risk of Pneumonia.</string>
    <string name="sensor_output_thermistor_10">Below recommended room temperature, turn on heating to decrease risk of Pneumonia.</string>
    <string name="sensor_output_thermistor_20">Regular room temperature</string>
    <string name="sensor_output_thermistor_30">Above recommend average room temperature.</string>
    <string name="sensor_output_thermistor_40">Possible fire, perform safety checks</string>
    <string name="sensor_output_thermistor_50">Possible fire, time to exit the building</string>

    <!--Flammable Gas-->
    <string name="sensor_output_mq2_10">Check gas appliances, potential leakage. Do not light any open flames.</string>
    <string name="sensor_output_mq2_20">Check gas appliances, potential leakage. Open all windows.Do not light any open flames.</string>
    <string name="sensor_output_mq2_50">Open all windows and doors, leave building and contact Gas Networks Ireland on 1850 20 50 50</string>

    <!--Motion-->
    <string name="sensor_output_motion_0">No motion currently being detected.</string>
    <string name="sensor_output_motion_1">Motion currently being detected!</string>

    <!--Light-->
    <string name="sensor_light_0">Typical level for a moonless night</string>
    <string name="sensor_light_1">Typical level for a full moon on a clear night</string>
    <string name="sensor_light_5">Typical level around twilight period</string>
    <string name="sensor_light_50">Typical level family living room lights</string>
    <string name="sensor_light_80">Typical level office building hallways/bath rooms</string>
    <string name="sensor_light_100">Typical level for a dark overcast day</string>
    <string name="sensor_light_300">Typical level for office lighting</string>
    <string name="sensor_light_400">Typical level for sunset or sunrise on a clear day</string>
    <string name="sensor_light_1000">Typical level for overcast day, or TV studio lighting</string>
    <string name="sensor_light_10000">Typical level for full daylight</string>
    <string name="sensor_light_30000">Typical level for direct sunlight</string>

    <string name="camera_no_videos">No Videos to Display</string>
    <string name="camera_fragment_no_image_selected">No Image or Video Selected</string>
    <string name="camera_refresh">Refresh</string>

</resources>
