<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Default_Fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ie.ucc.cs1.fyp.GraphFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Config_Section_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graphing_title_current_hour" />

            <View style="@style/Config_Divider" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graphing_line_chart_current_hour"
                android:layout_width="match_parent"
                android:layout_height="364dp" />

            <RadioGroup
                android:id="@+id/radio_group_current_hour"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_current_hour_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sensor_temperature" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_current_hour_co"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_mq7" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_current_hour_flam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_mq2" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_current_hour_motion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_motion" />
            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Config_Section_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graphing_title_current_day_summary_by_hour" />

            <View style="@style/Config_Divider" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graphing_line_chart_agg_hour"
                android:layout_width="match_parent"
                android:layout_height="364dp" />

            <RadioGroup
                android:id="@+id/radio_group_agg_hour"
                style="@style/CustomRadioButton"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_hour_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sensor_temperature" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_hour_co"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_mq7" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_hour_flam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_mq2" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_hour_motion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_motion" />
            </RadioGroup>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                style="@style/Config_Section_Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/graphing_title_day_summary" />

            <View style="@style/Config_Divider" />

            <com.github.mikephil.charting.charts.LineChart
                android:id="@+id/graphing_line_chart_agg_day"
                android:layout_width="match_parent"
                android:layout_height="364dp" />

            <RadioGroup
                android:id="@+id/radio_group_agg_day"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal"
                android:orientation="horizontal">

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_day_temp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/sensor_temperature" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_day_co"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_mq7" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_day_flam"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_mq2" />

                <RadioButton
                    style="@style/CustomRadioButton"
                    android:id="@+id/radio_agg_day_motion"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sensor_motion" />
            </RadioGroup>

        </LinearLayout>


    </LinearLayout>
</ScrollView>
